实现输入未知数和点并显示

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
-.inline-block-div {
+.left-div {
+    display: inline-block;
+    width: 450px;
+}
+
+.right-div {
     display: inline-block;
     vertical-align: top;
-    width: 450px;
+}
+
+#output {
+    border: 1px solid pink;
 }
